# chinese-tutor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/chiinese_tutor/: __init__.py  cli.py
src/chinese_tutor/: __init__.py  cli.py  elevenlabs_client.py  extract.py  paths.py  review.py  storage.py  web.py
